Correct formatting for mobile. Mobile ignored overflow-x

--- a/style.css
+++ b/style.css
@@ -25,8 +25,9 @@ hr {
     position: relative;
 }
 
-body {
+body, html {
     overflow-x: hidden;
+    position: relative;
 }
 
 .header {
